--- a/todo/src/main/resources/templates/login.html
+++ b/todo/src/main/resources/templates/login.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ログイン</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>hghg</h1>
-    <p>
-        hugahuga
-    </p>
-    <form role="form" th:action="@{/login}" th:object="${ToDoForm}" method="post">
+    <p>hugahuga</p>
+    <!-- <form role="form" th:action="@{/login}" th:object="${ToDoForm}" method="post">
         <table>
             <tr>
                 <td><label>Mid: </label></td>
@@ -21,7 +18,6 @@
             </tr>
         </table>
         <p><input type="submit" value="確認する" /></p>
-    </form>
-</body>
-
+    </form> -->
+  </body>
 </html>
