ログイン機能追加

--- a/todo/src/main/resources/templates/login.html
+++ b/todo/src/main/resources/templates/login.html
@@ -10,14 +10,14 @@
   <body>
     <h1>hghg</h1>
     <p>hugahuga</p>
-    <!-- <form role="form" th:action="@{/login}" th:object="${ToDoForm}" method="post">
-        <table>
-            <tr>
-                <td><label>Mid: </label></td>
-                <td><input type="text" required th:field="*{title}" /></td>
-            </tr>
-        </table>
-        <p><input type="submit" value="確認する" /></p>
-    </form> -->
+    <form role="form" method="post">
+      <table>
+        <tr>
+          <td><label>Mid: </label></td>
+          <td><input type="text" required /></td>
+        </tr>
+      </table>
+      <p><input type="submit" value="確認する" /></p>
+    </form>
   </body>
 </html>
