--- a/todo/src/main/resources/templates/todolist.html
+++ b/todo/src/main/resources/templates/todolist.html
@@ -9,7 +9,7 @@
 
   <body>
     <h1>リスト画面</h1>
-    <p>あなたのToDoが表示されますiijifjie</p>
+    <p>あなたのToDoが表示されます</p>
     <h2>ToDo</h2>
   </body>
 </html>
