--- a/todo/src/main/resources/templates/todolist.html
+++ b/todo/src/main/resources/templates/todolist.html
@@ -20,7 +20,7 @@
         <tr th:each="m: ${mid_ToDos}">
             <td>[[${m.title}]]</td>
             <td>[[${m.done}]]</td>
-            <td><a th:href=@{/admin/delete/{m}(m=${m.mid})}>削除</a></td>
+            <td><a th:href=@{/todo/{m}/{s}(m=${m.mid},s=${m.seq})}>完了</a></td>
         </tr>
     </table>
     <h1>ToDoを登録する</h1>
