ホーム画面に画像追加

--- a/todo/src/main/resources/templates/index.html
+++ b/todo/src/main/resources/templates/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ログイン</title>
-    <script>
-      function generate_path(mid) {}
-    </script>
   </head>
 
   <body>
+    <h1>ToDo管理アプリケーション</h1>
+    <img th:src="@{/images/todo_people.png}" width="840" />
     <h1>ログイン画面</h1>
     <p>自分のIDを入力してください</p>
     <form
