--- a/todo/src/main/resources/templates/todolist.html
+++ b/todo/src/main/resources/templates/todolist.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-<a th:href="@{/allmembers}">全員のToDoリスト</a>
+<a th:href="@{/allmembers}">全員のToDoリストを見る</a>
     <h1 th:text="|${mid}さんのToDoリスト|"></h1>
     <p>あなたのToDoが表示されます</p>
     <h2>ToDo</h2>
