--- a/todo/src/main/resources/templates/signup.html
+++ b/todo/src/main/resources/templates/signup.html
@@ -3,18 +3,19 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>管理者画面</title>
+    <title>サインアップ</title>
 </head>
 
 <body>
-    <h1>管理者画面</h1>
+    <h1>サインアップ</h1>
     <h2>メンバー新規登録</h2>
     <p> メンバーIDと氏名を入力して，「確認する」を押してください．</p>
     <ul>
         <li>メンバーIDには，アルファベット小文字，数字，ハイフン，アンダーバーのみ使用できます．4文字以上16文字未満．</li>
         <li>氏名は最大32文字．半角・全角が使用できます．</li>
+        <li>パスワードは8文字以上でつけてください．</li>
     </ul>
-    <form role="form" th:action="@{/admin/check}" th:object="${MemberForm}" method="post">
+    <form role="form" th:action="@{/sign_up/check}" th:object="${MemberForm}" method="post">
         <table>
             <tr>
                 <td><label>メンバーID: </label></td>
@@ -37,19 +38,6 @@
         </table>
         <p><input type="submit" value="確認する" /></p>
     </form>
-    <h2>登録済みメンバー</h2>
-    <table border="1">
-        <tr>
-            <th>メンバーID</th>
-            <th>氏名</th>
-            <th>コマンド</th>
-        </tr>
-        <tr th:each="m: ${members}">
-            <td>[[${m.mid}]]</td>
-            <td>[[${m.name}]]</td>
-            <td><a th:href=@{/admin/delete/{m}(m=${m.mid})}>削除</a></td>
-        </tr>
-    </table>
 </body>
 
 </html>
